# CUDA-MPI-pthreads-FFT

./: CMakeLists.txt  README.md
CUDA/: CMakeLists.txt  main_CUDA.cu
MPI/: CMakeLists.txt  main_MPI.cc
pthreads/: CMakeLists.txt  main.cc
src/: complex.cc  complex.h  input_image.cc  input_image.h
